<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bosschen.crunchtime.MainActivity">
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline_white_48dp"
        android:title="@string/action_settings1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/option1"
        android:icon="@drawable/ic_filter_1_white_48dp"
        android:title="@string/action_settings1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/option2"
        android:icon="@drawable/ic_filter_2_white_48dp"
        android:title="@string/action_settings2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/option3"
        android:icon="@drawable/ic_filter_3_white_48dp"
        android:title="@string/action_settings3"
        app:showAsAction="never"/>
</menu>
